# csound_pd

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
csound6_tilde/: CMakeLists.txt  README.md
csound6_tilde/examples/csound_floss_manual/: control.pd  settings.pd
csound6_tilde/examples/iem_workshop/: 02_simple.csd  03_sound.csd  06_event.csd  cs_pd_01_start.pd  cs_pd_02_load_csd.pd  cs_pd_03_sound.pd  cs_pd_05_control_input.pd
csound6_tilde/src/: csoundapi_tilde.c
csound7_tilde/: CMakeLists.txt  README.md
csound7_tilde/src/: csoundapi_tilde.c
examples/: README_EXAMPLES.md  control.csd  controlout.csd  controlout.pd  cs6_demo.csd  csound6~-help.pd  event.csd  event.pd  live.csd  live.pd  livein.csd  livein.pd  midi.pd  settings.pd  tablecopy.pd
examples/csound_floss_manual/: midi.csd  tablecopy.csd  tablecopy.pd
examples/iem_workshop/: 04_audio_thru.csd  05_RM.csd  07_midi.csd  08_transpose.csd  cs_pd_04_live_input.pd  cs_pd_06_event.pd  cs_pd_07_midi.pd  cs_pd_08_FFT.pd
src/: csoundapi_tilde.c
